{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 540,
  "lineage": "5af2164b-ee9c-84d6-6947-efe669105759",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06e840636a872cd21",
            "associate_with_private_ip": "20.0.1.50",
            "association_id": "eipassoc-0fe3af0f643452915",
            "domain": "vpc",
            "id": "eipalloc-06e840636a872cd21",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e1b33da35a30eb69",
            "private_dns": "ip-20-0-1-50.ec2.internal",
            "private_ip": "20.0.1.50",
            "public_dns": "ec2-3-233-118-172.compute-1.amazonaws.com",
            "public_ip": "3.233.118.172",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.project_gw",
            "aws_network_interface.web_server_nic",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05efe131605d76af4",
            "associate_with_private_ip": "20.0.2.50",
            "association_id": "eipassoc-05153763da4d6410c",
            "domain": "vpc",
            "id": "eipalloc-05efe131605d76af4",
            "instance": "i-0ef60c712b32eb407",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ee4b1fc65e6ac21e",
            "private_dns": "ip-20-0-2-50.ec2.internal",
            "private_ip": "20.0.2.50",
            "public_dns": "ec2-54-158-20-234.compute-1.amazonaws.com",
            "public_ip": "54.158.20.234",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.project_gw",
            "aws_network_interface.web_server_nic_2",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-2",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "skills-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:472088306911:loadbalancer/skills-elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "skills-elb-376296199.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "skills-elb",
            "idle_timeout": 400,
            "instances": [
              "i-0195118c71ae8596c",
              "i-0ef60c712b32eb407"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "skills-elb",
            "security_groups": [
              "sg-03b4a585c25a614b4"
            ],
            "source_security_group": "472088306911/allow_web_traffic",
            "source_security_group_id": "sg-03b4a585c25a614b4",
            "subnets": [
              "subnet-00d2e28fe14c690f9",
              "subnet-0c96bbf91e52793fc"
            ],
            "tags": {
              "Name": "skills-elb"
            },
            "tags_all": {
              "Name": "skills-elb"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.web_server_instance_1",
            "aws_instance.web_server_instance_2",
            "aws_network_interface.web_server_nic",
            "aws_network_interface.web_server_nic_2",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_subnet.subnet-2",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server_instance_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04505e74c0741db8d",
            "arn": "arn:aws:ec2:us-east-1:472088306911:instance/i-0195118c71ae8596c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0195118c71ae8596c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0e1b33da35a30eb69"
              }
            ],
            "primary_network_interface_id": "eni-0e1b33da35a30eb69",
            "private_dns": "ip-20-0-1-50.ec2.internal",
            "private_ip": "20.0.1.50",
            "public_ip": "3.233.118.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d787e34cf47ced82",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00d2e28fe14c690f9",
            "tags": {
              "Name": "web_server_1"
            },
            "tags_all": {
              "Name": "web_server_1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03b4a585c25a614b4"
            ]
          },
          "dependencies": [
            "aws_network_interface.web_server_nic",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server_instance_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04505e74c0741db8d",
            "arn": "arn:aws:ec2:us-east-1:472088306911:instance/i-0ef60c712b32eb407",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ef60c712b32eb407",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0ee4b1fc65e6ac21e"
              }
            ],
            "primary_network_interface_id": "eni-0ee4b1fc65e6ac21e",
            "private_dns": "ip-20-0-2-50.ec2.internal",
            "private_ip": "20.0.2.50",
            "public_ip": "54.158.20.234",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05e1fb56c61a2a577",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c96bbf91e52793fc",
            "tags": {
              "Name": "web_server_2"
            },
            "tags_all": {
              "Name": "web_server_2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03b4a585c25a614b4"
            ]
          },
          "dependencies": [
            "aws_network_interface.web_server_nic_2",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-2",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "project_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:472088306911:internet-gateway/igw-08cd95b7a975f883f",
            "id": "igw-08cd95b7a975f883f",
            "owner_id": "472088306911",
            "tags": {
              "Name": "project_terraform"
            },
            "tags_all": {
              "Name": "project_terraform"
            },
            "vpc_id": "vpc-0e4593eda04fd938d"
          },
          "dependencies": [
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web_server_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:472088306911:network-interface/eni-0e1b33da35a30eb69",
            "id": "eni-0e1b33da35a30eb69",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:7e:b1:54:40:b1",
            "owner_id": "472088306911",
            "private_ip": "20.0.1.50",
            "private_ip_list": [
              "20.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "20.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-03b4a585c25a614b4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00d2e28fe14c690f9"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web_server_nic_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:472088306911:network-interface/eni-0ee4b1fc65e6ac21e",
            "id": "eni-0ee4b1fc65e6ac21e",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:b1:ac:eb:00:1f",
            "owner_id": "472088306911",
            "private_ip": "20.0.2.50",
            "private_ip_list": [
              "20.0.2.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "20.0.2.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-03b4a585c25a614b4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c96bbf91e52793fc"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.subnet-2",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "project_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:472088306911:route-table/rtb-073b87abdcae9600d",
            "id": "rtb-073b87abdcae9600d",
            "owner_id": "472088306911",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08cd95b7a975f883f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e4593eda04fd938d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.project_gw",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b5e9a48927b1b48",
            "route_table_id": "rtb-073b87abdcae9600d",
            "subnet_id": "subnet-00d2e28fe14c690f9"
          },
          "dependencies": [
            "aws_internet_gateway.project_gw",
            "aws_route_table.project_route_table",
            "aws_subnet.subnet-1",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080b2eb824e220a69",
            "route_table_id": "rtb-073b87abdcae9600d",
            "subnet_id": "subnet-0c96bbf91e52793fc"
          },
          "dependencies": [
            "aws_internet_gateway.project_gw",
            "aws_route_table.project_route_table",
            "aws_subnet.subnet-2",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:472088306911:security-group/sg-03b4a585c25a614b4",
            "description": "Allow web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03b4a585c25a614b4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "472088306911",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "tags_all": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4593eda04fd938d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:472088306911:subnet/subnet-00d2e28fe14c690f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "20.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d2e28fe14c690f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "472088306911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-1"
            },
            "tags_all": {
              "Name": "subnet-1"
            },
            "vpc_id": "vpc-0e4593eda04fd938d"
          },
          "dependencies": [
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:472088306911:subnet/subnet-0c96bbf91e52793fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "20.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c96bbf91e52793fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "472088306911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-2"
            },
            "tags_all": {
              "Name": "subnet-2"
            },
            "vpc_id": "vpc-0e4593eda04fd938d"
          },
          "dependencies": [
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:472088306911:vpc/vpc-0e4593eda04fd938d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "20.0.0.0/16",
            "default_network_acl_id": "acl-01804ba8f613a3b8c",
            "default_route_table_id": "rtb-08d195856831f1605",
            "default_security_group_id": "sg-00546efe4f4d86fd9",
            "dhcp_options_id": "dopt-0daa8faf9b52aba56",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e4593eda04fd938d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08d195856831f1605",
            "owner_id": "472088306911",
            "tags": {
              "Name": "Show_your_skills_VPC"
            },
            "tags_all": {
              "Name": "Show_your_skills_VPC"
            }
          }
        }
      ]
    }
  ]
}